infrastructure/configs/prod-k3s-proxmox/cilium/gw.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: int-gw
  namespace: cilium-system
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 192.168.100.24
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.${cluster_subdomain}"
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.${cluster_subdomain}"
      tls:
        certificateRefs:
          - kind: Secret
            group: ""
            name: wildcard-ingress-tls-secret
            namespace: cert-manager
      allowedRoutes:
        namespaces:
          from: All
